--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
 MONGO_DB_URL = mongodb+srv://keshav:keshav@netflix-clone.kgd5f.mongodb.net/netflix-clone?retryWrites=true&w=majority
+SECRET_KEY = keshav
